fixing introduced transition color bug (logout -> disconnected); reverting changes on css class .sub-menu-btn: caused out of bound icons; reverted icons 'settings-symbolic' and 'network-vpn-offline-symbolic' to respectively 'view-more-symbolic' and 'action-unavailable-symbolic'

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,8 +60,8 @@
 }
 
 .sub-menu-btn{
-  margin-left: 1em;
-  margin-right: 1em;
+  margin-left:0.5em;
+  margin-right:0.5em;
   padding: 12px;
 }
 
